; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_value.c_array_copy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/src/extr_value.c_array_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i64, i32**, i64, i64)* @array_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @array_copy(i32** %0, i64 %1, i32** %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32** %0, i32*** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32** %2, i32*** %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load i32**, i32*** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = getelementptr inbounds i32*, i32** %11, i64 %12
  %14 = load i32**, i32*** %8, align 8
  %15 = load i64, i64* %9, align 8
  %16 = getelementptr inbounds i32*, i32** %14, i64 %15
  %17 = load i64, i64* %10, align 8
  %18 = mul i64 %17, 8
  %19 = call i32 @memcpy(i32** %13, i32** %16, i64 %18)
  ret void
}

declare dso_local i32 @memcpy(i32**, i32**, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
